manifests/service/deployment.yaml
#
# Copyright (c) 2025 Red Hat Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fulfillment-service
spec:
  selector:
    matchLabels:
      app: fulfillment-service
  replicas: 1
  template:
    metadata:
      labels:
        app: fulfillment-service
    spec:
      volumes:
      - name: sockets
        emptyDir:
          medium: Memory
      - name: envoy
        configMap:
          name: fulfillment-service-envoy
      - name: envoy-tls
        secret:
          secretName: fulfillment-service-tls
      containers:

      - name: server
        image: fulfillment-service
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        command:
        - /usr/local/bin/fulfillment-service
        - start
        - server
        - --log-level=debug
        - --log-headers=true
        - --log-bodies=true
        - --db-url=postgres://service:service123@fulfillment-database:5432/service
        - --grpc-listener-network=unix
        - --grpc-listener-address=/run/sockets/server.socket
        - --grpc-authn-type=jwks
        - --grpc-authn-jwks-url=https://kubernetes.default.svc/openid/v1/jwks
        - --grpc-authn-jwks-ca-file=/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - --grpc-authn-jwks-token-file=/run/secrets/kubernetes.io/serviceaccount/token

      - name: gateway
        image: fulfillment-service
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        command:
        - /usr/local/bin/fulfillment-service
        - start
        - gateway
        - --log-level=debug
        - --log-headers=true
        - --log-bodies=true
        - --http-listener-network=unix
        - --http-listener-address=/run/sockets/gateway.socket
        - --grpc-server-network=unix
        - --grpc-server-address=/run/sockets/server.socket
        - --grpc-server-plaintext

      - name: envoy
        image: envoy
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        - name: envoy
          mountPath: /etc/envoy
        - name: envoy-tls
          mountPath: /etc/envoy/tls
        command:
        - envoy
        - --config-path
        - /etc/envoy/envoy.yaml
        ports:
        - name: api
          protocol: TCP
          containerPort: 8000
